--- a/src/App.css
+++ b/src/App.css
@@ -6,167 +6,7 @@
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-@media (width <= 600px) {
-  .globalContainer {
-    background-color: rgb(224, 224, 224);
-    height: 100dvh;
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-  }
-
-  .header {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 2rem;
-    height: 35%;
-    width: 80%;
-  }
-
-  .header > header {
-    text-align: center;
-    width: 100%;
-  }
-  .header > header > h1 {
-    font-size: 3.5rem;
-  }
-
-  .header > header > h4,
-  h5 {
-    display: none;
-  }
-
-  .header > form {
-    width: 100%;
-    display: flex;
-    gap: 1rem;
-    height: 50px;
-  }
-
-  .header > form > input[type="text"] {
-    text-align: start;
-    width: 100%;
-    height: 100%;
-    padding: 10px;
-    box-shadow: 0px 0px 8px rgb(255, 255, 255);
-    outline: none;
-    border: none;
-    border-radius: 6px;
-    font-size: 1.2rem;
-  }
-  .header > form > button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 3rem;
-    height: auto;
-    border: none;
-    background-color: blue;
-    font-size: 1.5rem;
-    color: rgb(224, 224, 255);
-    font-weight: 900;
-    cursor: pointer;
-    border-radius: 6px;
-  }
-
-  .TaskBox {
-    height: 50%;
-    width: 80%;
-    overflow-y: scroll;
-    background-color: rgb(228, 228, 228);
-    box-shadow: 0px 0px 20px rgb(255, 255, 255);
-    border-radius: 10px;
-    color: rgb(32, 32, 32);
-    padding: 10px;
-  }
-
-  .TaskBox::-webkit-scrollbar {
-    width: 10px;
-    background-color: rgb(46, 46, 46);
-    border-radius: 10px;
-  }
-
-  .TaskBox::-webkit-scrollbar-thumb {
-    background-color: rgb(161, 161, 161);
-    border-radius: 10px;
-  }
-
-  .TaskBox::-webkit-scrollbar-track {
-    background-color: rgb(218, 218, 218);
-    border-radius: 10px;
-  }
-
-  .listTasks {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-  }
-
-  .task {
-    list-style: none;
-    padding: 0.5rem;
-    display: flex;
-    box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.208);
-    gap: 0.5rem;
-    border-radius: 5px;
-    height: 75px;
-    background-color: rgb(240, 240, 240);
-    overflow: hidden;
-    align-items: center;
-  }
-
-  .task > p {
-    display: flex;
-    align-items: center;
-    max-width: 100%;
-    width: 100%;
-    height: 100%;
-    box-sizing: border-box;
-    text-transform: uppercase;
-  }
-
-  .task > input {
-    display: flex;
-    align-items: center;
-    width: 35px;
-    height: 50px;
-  }
-
-  .btnsTask {
-    display: flex;
-    gap: 0.5rem;
-    align-self: center;
-  }
-
-  .btns-task {
-    border: none;
-    padding: 0.5rem;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: all 0.3s;
-    width: 50px;
-    height: 50px;
-    font-size: 1.4rem;
-  }
-
-  .btnsTask > .edit {
-    color: rgb(0, 86, 0);
-  }
-  .btnsTask > .delete {
-    color: rgb(122, 0, 0);
-  }
-
-  .btns-task:hover {
-    opacity: 0.5;
-  }
-}
-
-@media (width > 600px) {
+@media (width > 700px) {
   .globalContainer {
     background-color: rgb(224, 224, 224);
     height: 100vh;
@@ -175,6 +15,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 20px;
   }
 
   .header {
@@ -200,14 +41,14 @@
     font-weight: 500;
   }
 
-  .header > form {
+  .globalContainer > form {
     width: 60%;
     display: flex;
     gap: 1rem;
     height: 50px;
   }
 
-  .header > form > input[type="text"] {
+  .globalContainer > form > input[type="text"] {
     text-align: start;
     width: 100%;
     height: 100%;
@@ -217,7 +58,7 @@
     border: none;
     border-radius: 6px;
   }
-  .header > form > button {
+  .globalContainer > form > button {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -234,7 +75,7 @@
 
   .TaskBox {
     height: 50%;
-    width: 50%;
+    width: 60%;
     overflow-y: scroll;
     background-color: rgb(228, 228, 228);
     box-shadow: 0px 0px 20px rgb(255, 255, 255);
@@ -302,8 +143,8 @@
   .task > input {
     display: flex;
     align-items: center;
-    width: 20%;
-    height: 50%;
+    width: 25px;
+    height: 25px;
     cursor: pointer;
   }
 
@@ -333,5 +174,188 @@
 
   .btns-task:hover {
     opacity: 0.5;
+  }
+
+  .opc {
+    display: flex;
+    list-style: none;
+    width: 60%;
+    justify-content: space-around;
+    text-transform: uppercase;
+  }
+
+  .opc > li {
+    cursor: pointer;
+    padding: 5px 10px;
+    border-radius: 10px;
+    transition: all 0.25s ease;
+  }
+
+  .opc > li:hover {
+    background-color: rgba(0, 0, 255, 0.168);
+    color: white;
+  }
+
+  .selectOpc {
+    background-color: blue;
+    color: white;
+    font-weight: 700;
+  }
+}
+
+@media (width <= 700px) {
+  .globalContainer {
+    background-color: rgb(224, 224, 224);
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding: 1rem;
+  }
+
+  .header {
+    width: 100vw;
+    height: auto;
+  }
+
+  .header > header > h1 {
+    font-size: 3rem;
+    text-align: center;
+    width: 100%;
+  }
+
+  .header > header > h4,
+  h5 {
+    display: none;
+  }
+
+  .globalContainer > form {
+    width: 100%;
+    display: flex;
+    height: 50px;
+  }
+
+  .globalContainer > form > input[type="text"] {
+    text-align: start;
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    box-shadow: 0px 0px 8px rgb(255, 255, 255);
+    outline: none;
+    border: none;
+    border-radius: 6px 0 0 6px;
+    font-size: 1.2rem;
+  }
+  .globalContainer > form > button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 3rem;
+    height: auto;
+    border: none;
+    background-color: blue;
+    font-size: 1.5rem;
+    color: rgb(224, 224, 255);
+    font-weight: 900;
+    cursor: pointer;
+    border-radius: 0 6px 6px 0;
+  }
+
+  .TaskBox {
+    height: 70%;
+    width: 100%;
+    overflow-y: scroll;
+    background-color: rgb(228, 228, 228);
+    border-radius: 10px;
+    color: rgb(32, 32, 32);
+  }
+
+  .listTasks {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .task {
+    list-style: none;
+    padding: 0.5rem;
+    display: flex;
+    box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.208);
+    gap: 0.5rem;
+    border-radius: 5px;
+    height: 75px;
+    background-color: rgb(240, 240, 240);
+    overflow: hidden;
+    align-items: center;
+  }
+
+  .task > p {
+    display: flex;
+    align-items: center;
+    max-width: 100%;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    text-transform: uppercase;
+  }
+
+  .task > input {
+    display: flex;
+    align-items: center;
+    width: 35px;
+    height: 50px;
+  }
+
+  .btnsTask {
+    display: flex;
+    gap: 0.5rem;
+    align-self: center;
+  }
+
+  .btns-task {
+    border: none;
+    padding: 0.5rem;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: all 0.3s;
+    width: 50px;
+    height: 50px;
+    font-size: 1.4rem;
+  }
+
+  .btnsTask > .edit {
+    color: rgb(0, 86, 0);
+  }
+  .btnsTask > .delete {
+    color: rgb(122, 0, 0);
+  }
+
+  .btns-task:hover {
+    opacity: 0.5;
+  }
+  .opc {
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    list-style: none;
+    width: 100%;
+    text-transform: uppercase;
+  }
+
+  .opc > li {
+    cursor: pointer;
+    padding: 5px 10px;
+    border-radius: 10px;
+    transition: all 0.25s ease;
+    text-align: center;
+  }
+
+  .selectOpc {
+    background-color: blue;
+    color: white;
+    font-weight: 700;
   }
 }
