--- a/src/App.css
+++ b/src/App.css
@@ -206,7 +206,7 @@
 @media (width <= 700px) {
   .globalContainer {
     background-color: rgb(224, 224, 224);
-    height: 100vh;
+    height: 100dvh;
     width: 100vw;
     display: flex;
     flex-direction: column;
